[package]
name = "lau-evolutionary-computation"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Evolutionary computation library — genetic algorithms, differential evolution, NSGA-II, genetic programming, and fitness landscapes"
repository = "https://github.com/SuperInstance/lau-evolutionary-computation"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
serde_json = "1"

[dev-dependencies]
